# starsync

./: Cargo.toml  README.md
src/: common_path.rs  config.rs  lib.rs  main.rs  utils.rs
src/device/: disk.rs  m3u.rs  mod.rs  mtp.rs  mtp_win.rs
src/device/disk/: mtp_gvfs.rs
src/os/: mod.rs
src/os/unix/: login1.rs  mod.rs
src/os/windows/: mod.rs
src/source/: itunes.rs  itunes_win.rs  mod.rs  serde_u64_hex_utils.rs
src/source/rhythmbox/: entry.rs  mediaplayer.rs  mod.rs  playlistmanager.rs  playlists.rs  rhythmdb.rs
src/sync/: info.rs  mod.rs  status.rs  utils.rs
